# amqpcpp_asio

./: CMakeLists.txt  consumer.cpp  cpx.hh  generated.cpp  producer.cpp
include/: amqp_asio_handler.h
src/: amqp_asio_handler.cpp
